demo/extras/P1-Enterprise/infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anime-frontend-svc
  namespace: anime-recommender
  labels:
    app: anime-frontend
spec:
  selector:
    app: anime-frontend
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
  type: NodePort
